# monster-battle

./: Cargo.toml  Dockerfile  Makefile  README.md  altstore-source.json
.github/workflows/: ci.yml  ios.yml  release.yml
crates/android/: AndroidManifest.xml  Cargo.toml  manifest.yaml
crates/android/res/xml/: file_paths.xml
crates/android/src/: battle_effects.rs  connection.rs  game.rs  lib.rs  net_task.rs  sprites.rs
crates/android/src/ui/: battle.rs  common.rs  main_menu.rs  mod.rs  monster_list.rs
crates/android/src/ui/screens/: battle.rs  breeding.rs  cemetery.rs  help.rs  main_menu.rs  minigame.rs  mod.rs  monster_list.rs  naming.rs  new_monster.rs  pvp.rs  select_attacks.rs  select_monster.rs  training.rs
crates/android/src/ui/screens/minigame/: memory.rs  mod.rs  reflex.rs  rps.rs  tictactoe.rs
crates/audio/: Cargo.toml
crates/audio/src/: engine.rs  lib.rs  pattern.rs  synth.rs  track_def.rs  tracks.rs
crates/audio/tracks/: battle.json  breeding.json  cemetery.json  defeat.json  exploration.json  title.json  victory.json
crates/composer/: Cargo.toml
crates/composer/src/: app.rs  main.rs  project.rs  ui.rs
crates/core/: Cargo.toml
crates/core/src/: attack.rs  battle.rs  combat.rs  genetics.rs  lib.rs  monster.rs  types.rs
crates/core/src/minigame/: memory.rs  mod.rs  reflex.rs  rps.rs  tictactoe.rs
crates/ios/: Cargo.toml
crates/ios/src/: game.rs  lib.rs
crates/ios/src/ui/: common.rs  mod.rs
crates/ios/src/ui/screens/: battle.rs  breeding.rs  main_menu.rs  naming.rs  select_attacks.rs
crates/ios/src/ui/screens/minigame/: rps.rs
crates/mobile-ui/: Cargo.toml
crates/mobile-ui/src/: audio.rs  battle_effects.rs  battle_images.rs  connection.rs  game.rs  lib.rs  net_task.rs  platform.rs  screens.rs  sprites.rs  updater.rs
crates/mobile-ui/src/ui/: common.rs  mod.rs
crates/mobile-ui/src/ui/screens/: battle.rs  breeding.rs  cemetery.rs  help.rs  main_menu.rs  mod.rs  monster_detail.rs  monster_list.rs  naming.rs  new_monster.rs  pvp.rs  select_attacks.rs  select_monster.rs  training.rs
crates/mobile-ui/src/ui/screens/minigame/: memory.rs  mod.rs  reflex.rs  rps.rs  tictactoe.rs
crates/network/: Cargo.toml
crates/network/src/: client.rs  lib.rs  protocol.rs  server.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/sprites/: Cargo.toml
crates/sprites/src/: earth.rs  electric.rs  fire.rs  lib.rs  light.rs  overlays.rs  plant.rs  shadow.rs  water.rs  wind.rs
crates/storage/: Cargo.toml
crates/storage/src/: crypto.rs  lib.rs  local.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  audio.rs  main.rs
crates/tui/src/modales/: update.rs
crates/tui/src/screens/: battle.rs  breeding.rs  cemetery.rs  common.rs  help.rs  main_menu.rs  minigame.rs  mod.rs  monster_list.rs  naming.rs  new_monster.rs  pvp.rs  training.rs
crates/tui/src/screens/minigame/: memory.rs  mod.rs  reflex.rs  rps.rs  tictactoe.rs
crates/tui/src/sprites/: earth.rs  electric.rs  fire.rs  light.rs  mod.rs  pixel.rs  plant.rs  shadow.rs  water.rs  wind.rs
ios-app/: AppDelegate.swift  Info.plist  README.md  main.m  monster_battle_ios-Bridging-Header.h
ios-app/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios-app/MonsterBattle.xcodeproj/: project.pbxproj
ios-app/MonsterBattle.xcodeproj/xcshareddata/xcschemes/: monster-battle-ios.xcscheme
ios-app/monster-battle-ios.xcodeproj/: project.pbxproj
ios-app/monster-battle-ios.xcodeproj/xcshareddata/xcschemes/: monster-battle-ios.xcscheme
scripts/: gen_icon.py  inject_resources.py
web/: sprites.html
