[workspace]
resolver = "2"
members = ["crates/core", "crates/storage", "crates/network", "crates/tui"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Random
rand = "0.8"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Encryption
aes-gcm = "0.10"
sha2 = "0.10"

# Network
tokio = { version = "1", features = [
  "rt-multi-thread",
  "net",
  "io-util",
  "macros",
  "sync",
  "time",
] }

# Error handling
anyhow = "1"
thiserror = "2"

# Internal crates
monster-battle-core = { path = "crates/core" }
monster-battle-storage = { path = "crates/storage" }
monster-battle-network = { path = "crates/network" }
