[workspace]
resolver = "2"
members = [
  "crates/core",
  "crates/storage",
  "crates/network",
  "crates/tui",
  "crates/server",
]

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Random
rand = "0.8"

# TUI
ratatui = "0.29"
crossterm = "0.28"
tachyonfx = "0.9"

# Encryption
aes-gcm = "0.10"
sha2 = "0.10"

# Network
tokio = { version = "1", features = [
  "rt-multi-thread",
  "net",
  "io-util",
  "macros",
  "sync",
  "time",
] }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }
futures-util = "0.3"

# Error handling
anyhow = "1"
thiserror = "2"

# Internal crates
monster-battle-core = { path = "crates/core" }
monster-battle-storage = { path = "crates/storage" }
monster-battle-network = { path = "crates/network" }
monster-battle-server = { path = "crates/server" }
