[workspace]
resolver = "2"
members = [
  "crates/core",
  "crates/storage",
  "crates/network",
  "crates/sprites",
  "crates/tui",
  "crates/server",
  "crates/audio",
  "crates/android",
  "crates/composer",
  "crates/ios",
  "crates/mobile-ui",
]

[workspace.package]
version = "1.9.6"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Random
rand = "0.8"

# TUI
ratatui = "0.29"
crossterm = "0.28"
tachyonfx = "0.9"

# Game engine (Android)
bevy = "0.15"

# Encryption
aes-gcm = "0.10"
sha2 = "0.10"

# Network
tokio = { version = "1", features = [
  "rt-multi-thread",
  "net",
  "io-util",
  "macros",
  "sync",
  "time",
] }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }
futures-util = "0.3"

# Error handling
anyhow = "1"
thiserror = "2"

# Internal crates
monster-battle-core = { path = "crates/core" }
monster-battle-sprites = { path = "crates/sprites" }
monster-battle-storage = { path = "crates/storage" }
monster-battle-network = { path = "crates/network" }
monster-battle-server = { path = "crates/server" }
monster-battle-audio = { path = "crates/audio" }
monster-battle-android = { path = "crates/android" }
monster-battle-ios = { path = "crates/ios" }
monster-battle-mobile-ui = { path = "crates/mobile-ui" }
monster-battle-composer = { path = "crates/composer" }
