[package]
name = "monster-battle-android"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
# ── Crates internes ──────────────────────────────────────────────
monster-battle-core.workspace = true
monster-battle-storage.workspace = true
monster-battle-network.workspace = true
monster-battle-audio.workspace = true

# ── Moteur de jeu ────────────────────────────────────────────────
bevy = { version = "0.15", default-features = false, features = [
  "bevy_asset",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_sprite",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "default_font",
  "multi_threaded",
  "png",
  "x11",
] }

# ── Sérialisation ────────────────────────────────────────────────
serde.workspace = true
serde_json.workspace = true

# ── Identifiants ─────────────────────────────────────────────────
uuid.workspace = true

# ── Temps ────────────────────────────────────────────────────────
chrono.workspace = true

# ── Async (pour le réseau) ───────────────────────────────────────
tokio.workspace = true

# ── Erreurs ──────────────────────────────────────────────────────
anyhow.workspace = true

# ── Logging Android ──────────────────────────────────────────────
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
# Forcer shared-stdcxx pour rodio/cpal (évite conflit avec bevy)
rodio = { version = "0.19", default-features = false, features = [
  "cpal-shared-stdcxx",
] }
bevy = { version = "0.15", default-features = false, features = [
  "android-native-activity",
  "android_shared_stdcxx",
  "bevy_asset",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_sprite",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "default_font",
  "multi_threaded",
  "png",
] }

[features]
default = []
# Activer pour le build desktop (test/dev)
desktop = []

# ── Métadonnées Android (utilisées par xbuild) ──────────────────
[package.metadata.android]
runtime_libs = "game_activity"

[package.metadata.android.manifest]
package = "com.ajustor.monsterbattle"

[package.metadata.android.manifest.sdk]
min_sdk_version = 24
target_sdk_version = 36

[package.metadata.android.manifest.application]
label = "Monster Battle"
