[package]
name = "monster-battle-ios"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
monster-battle-mobile-ui = { path = "../mobile-ui" }

bevy = { version = "0.15", default-features = false, features = [
  "bevy_asset", "bevy_color", "bevy_core_pipeline", "bevy_render",
  "bevy_sprite", "bevy_state", "bevy_text", "bevy_ui", "bevy_winit",
  "default_font", "multi_threaded", "png",
] }

log = "0.4"
env_logger = "0.11"

[target.'cfg(not(target_os = "ios"))'.dependencies]
bevy = { version = "0.15", default-features = false, features = ["x11"] }
