[package]
name = "monster-battle-network"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
monster-battle-core.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
rustls.workspace = true
futures-util.workspace = true
anyhow.workspace = true
thiserror.workspace = true
