[package]
name = "monster-battle-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "monster-battle-server"
path = "src/main.rs"

[dependencies]
monster-battle-core.workspace = true
monster-battle-network.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
anyhow.workspace = true
