[package]
name = "monster-battle-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
monster-battle-core.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
aes-gcm.workspace = true
sha2.workspace = true
rand.workspace = true
chrono.workspace = true
