[package]
name = "monster-battle"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
monster-battle-core.workspace = true
monster-battle-storage.workspace = true
monster-battle-network.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tachyonfx.workspace = true
anyhow.workspace = true
uuid.workspace = true
tokio.workspace = true
chrono.workspace = true
